- Fixed OEM Dashcam streaming - Added optimisation logic to reduce Battery Drain even further in Surveillance mode - Added auto turn-off Surveillance mode when SOC <=10%
- **Fisheye correction for the cameras** — A new setting that straightens out the curve on the wide-angle cameras so recordings look more natural — straight things stay straight. Turn it on for **Vehicle On** (driving) and **Vehicle Off** (parked) recordings independently from **Settings → Recording**
- **Zoom into a single camera** — Tap any camera (front, rear, left, right) to zoom in for a closer look while the others stay where they are. Available in both the in-car app and the web app, and your zoom level is remembered per camera
- **Search recordings by place** — A new search bar on the Recordings page lets you find clips by the place they were taken — type a city, area, or landmark and the list filters as you type

- **OEM Dashcam streaming fix** — Fixed an issue where the OEM dashcam live stream wouldn't start or would freeze shortly after opening
- **Faster Recordings and Trips pages** — Both pages now open noticeably quicker, especially on slower head units